# ulta-claw

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  SECURITY.md  docker-compose.yml  test_om.py  test_redis_submit.py
agent/: Dockerfile  requirements.txt
agent/agent/: __init__.py  config.py  graph.py  llm.py  main.py  memory.py  orchestration_agent.py  skill_execution_agent.py  storage.py  tools.py
cli/: Dockerfile  README.md  __init__.py  requirements.txt
cli/api/: __init__.py  main.py
cli/cli/: __init__.py  client.py  health.py  main.py  redis_cli.py
cli/frontend/: .env.example  README.md  next.config.js  package.json
cli/frontend/app/: layout.tsx  page.tsx
cli/frontend/app/api/health/: route.ts
config/litellm/: README.md  config.yaml
config/redis/: README.md  redis.conf  users.acl
config/squid/: README.md  squid.conf  whitelist.txt
gateway/: Cargo.toml  Dockerfile
gateway/src/: main.rs  telegram.rs
scripts/: deploy.sh  health.sh
