[package]
name = "secure-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.7"
http = "1.0"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# HTTP Client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Security
jsonwebtoken = "9"
bcrypt = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
